[gd_scene load_steps=5 format=3 uid="uid://cx4v46xru1vo5"]

[ext_resource type="Script" uid="uid://bo8d0ghr6lql2" path="res://minigame_complete.gd" id="1_r0vcu"]
[ext_resource type="Texture2D" uid="uid://bnbtja8jxgo1x" path="res://Sprites/Doneta/Doneta/ButtonLeft.png" id="2_qu4rm"]
[ext_resource type="Texture2D" uid="uid://1ubrib54o381" path="res://Sprites/Doneta/Doneta/ButtonRight.png" id="3_mvb4q"]

[sub_resource type="SpriteFrames" id="SpriteFrames_r0vcu"]
animations = [{
"frames": [],
"loop": true,
"name": &"OneMoon",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"ThreeMoon",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"TwoMoon",
"speed": 5.0
}]

[node name="MinigameComplete" type="Node2D"]
script = ExtResource("1_r0vcu")

[node name="Level" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="LevelCompleteUI" type="Sprite2D" parent="."]

[node name="MoonsEarned" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r0vcu")
animation = &"TwoMoon"

[node name="PlayAgain" type="TextureButton" parent="."]
offset_left = 377.0
offset_top = 515.0
offset_right = 877.0
offset_bottom = 1015.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("2_qu4rm")

[node name="Return" type="TextureButton" parent="."]
offset_left = 680.0
offset_top = 512.0
offset_right = 1180.0
offset_bottom = 1012.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("3_mvb4q")

[connection signal="pressed" from="PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
